--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
   <title>Demo</title>
   <base href="/">
   <meta charset="utf-8">
+  <script
+  src="https://www.paypal.com/sdk/js?client-id=AZF8iG0nFHe89Qk1z5RmjUyJzzoKb0swWCutnjJNa1wmv0iIXofFhX-0Wj4Y57shkiAJL-WNk5ZzNe1M">
+  </script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
